force-app/package/core/objects/Schema_Instruction__c/Schema_Instruction__c.object-meta.xml
<CustomObject>
    <description>Contains reusable detailed LLM instructions that can be used in prompt templates as part of constructing the schema</description>
    <label>Schema Instruction</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>