force-app/package/core/objects/Schema_Instruction__c/fields/Allow_Delete__c.field-meta.xml
<CustomField>
    <fullName>Allow_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override to allow to delete the default record</description>
    <label>Allow Delete</label>
    <type>Checkbox</type>
</CustomField>