force-app/package/core/objects/Schema_Instruction__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>There can be only one default schema instruction set. This default one should not be updated</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>