force-app/package/core/objects/Schema_Instruction__c/fields/Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The latest version of the instructions</inlineHelpText>
    <label>Latest Version</label>
    <referenceTo>Schema_Instruction_Version__c</referenceTo>
    <relationshipLabel>Schema Instructions</relationshipLabel>
    <relationshipName>Schema_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>