force-app/package/core/objects/Schema_Instruction__c/fields/Number_of_Versions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Versions__c</fullName>
    <label>Number of Versions</label>
    <summaryForeignKey>Schema_Instruction_Version__c.Schema_Instruction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>