force-app/package/core/objects/Schema_Instruction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Default__c</columns>
    <columns>Latest_Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>